# rmst-toolkit

./: .release-it.json  README.md  note.md  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  vite.config.ts
.github/workflows/: release-2.yml  release-prod.yml  release.yml
scripts/: build.ts
src/: App.tsx  main.less  type.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons2/: ww-script.js
src-tauri/src/: commands.rs  constant.rs  lib.rs  main.rs  shortcut.rs  store.rs  tray.rs  updater.rs  utils.rs  window.rs
src-tauri/src/cmds/: _test.rs  command.rs  common.rs  mod.rs  open_win.rs  open_with_terminal.rs  proxy_watcher.rs  setting.rs  updater.rs
src/pages/: OpenFolder.tsx  QuickInput.tsx  TrayMenu.tsx
src/pages/Setting/: SettingConfig.tsx  Updater.tsx  index.tsx
src/pages/Setting/SmallTool/: ExecCommand.tsx  KillPortTool.tsx  OpenWindow.tsx  Remove_node_modules.tsx  index.tsx
~/.tauri/: myapp.key  myapp.key.pub
