[package]
name = "rmst-toolkit"
version = "0.1.18"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rmst_tauri_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "image-ico",
  "devtools",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.0"
enigo = "0.3.0"

tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-process = "2"
log = "0.4.27"
tauri-plugin-log = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-os = "2"
