[package]
name = "rmst-toolkit"
version = "0.1.45"
description = "A Tauri App"
authors = ["rmstsd"]
edition = "2021"

[profile.dev]
incremental = true       # 增量编译（仅重新编译修改的模块）
parallel-compiler = true # 并行编译（利用多核心CPU）
codegen-units = 16       # 增加代码生成单元（牺牲少量优化换速度）
debug = 1                # 仅生成基础调试信息（debug=2会大幅增加编译时间）

[profile.dev.package."*"]
opt-level = 0 # 依赖库不优化（加快编译）

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rmst_tauri_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [
  "tray-icon",
  "image-png",
  "image-ico",
  "devtools",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.0"
enigo = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }

tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-process = "2"
log = "0.4.27"
tauri-plugin-log = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"

image = "0.25"
